--- a/Morcoso_Daisy/index.html
+++ b/Morcoso_Daisy/index.html
@@ -49,7 +49,7 @@
         <li>To buy what I want by not looking at the price tag.</li>
         <li>Buying own house and car.</li>
         <li>Sleep all night</li>
-        <li>To have a better life</li>
+        <li>Make my parents proud.</li>
       </ol>
     </section>
 
